--- a/generators/app/templates/root/package.json
+++ b/generators/app/templates/root/package.json
@@ -3,8 +3,8 @@
    "version": "0.0.1",
    "private": true,
    "scripts": {
-      "serve": "node ./server",
-      "start": "watchify public/js/index.js -v -t babelify -o public/build/bundle.js"
+      "start": "node ./server",
+      "dev": "watchify public/js/index.js -v -t babelify -o public/build/bundle.js"
    },
    "dependencies": {
       "backbone": "^1.3.3",
@@ -23,10 +23,12 @@
       "babelify": "^6.3.0",
       "browserify": "^13.0.0",
       "grunt": "^0.4.5",
-      "grunt-browserify": "^5.0.0",
       "grunt-bowercopy": "^1.2.4",
+      "grunt-browserify": "^5.0.0",
+      "grunt-contrib-uglify": "^1.0.1",
       "grunt-contrib-watch": "^0.6.1",
       "grunt-develop": "^0.4.0",
+      "grunt-dom-munger": "^3.4.0",
       "load-grunt-tasks": "^3.2.0",
       "request": "^2.60.0",
       "time-grunt": "^1.2.1",
