--- a/generators/app/templates/root/bower.json
+++ b/generators/app/templates/root/bower.json
@@ -7,6 +7,7 @@
     "components"
   ],
   "dependencies": {
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "font-awesome": "fontawesome#^4.6.3"
   }
 }
