--- a/generators/app/templates/root/package.json
+++ b/generators/app/templates/root/package.json
@@ -7,16 +7,18 @@
       "dev": "watchify public/js/index.js -v -t babelify -o public/build/bundle.js"
    },
    "dependencies": {
+      "axios": "^0.12.0",
       "backbone": "^1.3.3",
       "backbone-react-component": "^0.10.0",
       "bootstrap": "^3.3.6",
       "express": "^4.13.3",
       "express-handlebars": "^3.0.0",
-      "serve-favicon": "^2.3.0",
       "jquery": "^2.2.3",
+      "jsonfile": "^2.3.1",
       "morgan": "^1.6.1",
       "react": "^0.14.0",
       "react-dom": "^0.14.0",
+      "serve-favicon": "^2.3.0",
       "underscore": "^1.8.3"
    },
    "devDependencies": {
