--- a/generators/app/templates/root/package.json
+++ b/generators/app/templates/root/package.json
@@ -1,9 +1,9 @@
 {
    "name": "<%= options.appName %>",
-   "version": "0.0.1",
+   "version": "1.0.0",
    "private": true,
    "scripts": {
-      "start": "node ./index",
+      "start": "node ./start",
       "dev": "watchify public/js/index.js -v -t babelify -o public/build/bundle.js"
    },
    "dependencies": {
@@ -14,7 +14,6 @@
       "bootstrap": "^3.3.6",
       "express": "^4.13.3",
       "express-handlebars": "^3.0.0",
-      "glob": "^7.0.3",
       "jquery": "^2.2.3",
       "jsonfile": "^2.3.1",
       "morgan": "^1.6.1",
@@ -25,8 +24,13 @@
       "underscore": "^1.8.3"
    },
    "devDependencies": {
-      "babelify": "^6.3.0",
-      "browserify": "^13.0.0",
+      "babel-cli": "^6.14.0",
+      "babel-preset-es2015": "^6.14.0",
+      "babel-preset-stage-2": "^6.13.0",
+      "babel-register": "^6.14.0",
+      "babel-preset-react" : "^6.11.1",
+      "babelify": "^7.3.0",
+      "browserify": "^13.1.0",
       "grunt": "^0.4.5",
       "grunt-bowercopy": "^1.2.4",
       "grunt-browserify": "^5.0.0",
